<resources>
    <string name="songle">Songle</string>
    <string name="map">Map</string>
    <string name="very_easy">Very Easy</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="extreme">EXTREME</string>
    <string name="show_list">Show List of Words Found</string>
    <string name="guess_song_hint">Can you guess the song?</string>
    <string name="guess_song">Guess the Song</string>
    <string name="welcome_title">SONGLE</string>
    <string name="welcome_play_button">NEW GAME</string>
    <string name="are_you_sure">Are you sure? Your progress will be erased.</string>
    <string name="welcome_resume_button">RESUME GAME</string>
    <string name="proceed">Proceed</string>
    <string name="go_back">Go Back</string>
    <string name="welcome_settings_button">SETTINGS</string>
    <string name="random">Guess a random song</string>
    <string name="game_over">GAME OVER</string>
    <string name="return_to_menu">RETURN TO MENU</string>
    <string name="replay_guessed_songs">REPLAY GUESSED SONGS!</string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="finish">FINISH</string>
    <string name="you_ran_out_of_time">You ran out of time!</string>
    <string name="you_ran_out_of_attempts">You ran out of attempts!</string>
    <string name="attempts_left">Attempts left: %1$d</string>
    <string name="attemps_needed">Attempts needed: %1$d</string>
    <string name="time_taken">Time taken: %1$s</string>
    <plurals name="markers_found">
        <item quantity="one">Found %1$d marker, %2$s %% of markers</item>
        <item quantity="other">Found %1$d markers, %2$s %% of markers</item>
    </plurals>
    <string name="incorrect_try_again">Incorrect! Try again</string>
    <string name="you_guessed_it">You guessed it! The song was %1$s</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="enter_between_0_and_99">Please enter a value between 0 and 99.</string>
    <string name="enter_between_0_and_59">Please enter a value between 0 and 59.</string>

    <!-- Content Descriptions -->
    <string name="crying_emoji">Crying emoji</string>
    <string name="confused_emoji">Confused emoji</string>
    <string name="party_emoji">Party emoji</string>
    <string name="turn_heatmap_on_and_off">Turn heatmap on and off</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_choose_song">ChooseSong</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_ingame">In-Game</string>

    <string name="pref_title_set_timer_onoff">Play with timer:</string>
    <string name="pref_description_set_timer_onoff">Want to play against the clock?
    </string>

    <string name="pref_title_set_timer_amount">Set amount of time:</string>
    <string name="pref_description_set_timer_amount">Set the amount of time for the timer</string>

    <string name="pref_title_set_timer_background">Timer runs in background:</string>
    <string name="pref_description_set_timer_background">Choose whether the timer should keep running even if Songle is closed.</string>

    <string name="pref_title_choose_map_type">Choose map type:</string>
    <string name="pref_description_choose_map_type">Choose between a normal, hybrid, or satellite map</string>
    <string-array name="pref_map_types">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
    </string-array>
    <string-array name="pref_map_type_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_set_extreme_mode">EXTREME MODE</string>
    <string name="pref_description_set_extreme_mode">Want the ultimate challenge? 15 minute timer, the hardest maps for every song, only one guess!</string>

    <string name="pref_title_try_switch">Play with tries:</string>
    <string name="pref_description_try_switch">Want limited possible attempts to guess the song?</string>

    <string name="pref_title_try_amount">Set amount of times you can guess:</string>
    <string name="pref_description_try_amount">Set the amount of times you can try to guess the song, before it\'s game over</string>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data and Sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>
