<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:keep="@xml/preferences">
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_map_types"
        android:entryValues="@array/pref_map_type_values"
        android:key="set_map_type_list"
        android:negativeButtonText="Cancel"
        android:title="@string/pref_title_choose_map_type"
        android:summary="Choose between normal, hybrid and satellite" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="set_extreme_mode_switch"
        android:summary="@string/pref_description_set_extreme_mode"
        android:title="@string/pref_title_set_extreme_mode" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="set_try_switch"
        android:title="@string/pref_title_try_switch"
        android:summary="@string/pref_description_try_switch" />


    <EditTextPreference
        android:defaultValue="5"
        android:key="set_try_amount"
        android:title="@string/pref_title_try_amount"
        android:summary="@string/pref_description_try_amount"
        android:inputType="number" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="set_timer_background"
        android:title="@string/pref_title_set_timer_background"
        android:summary="@string/pref_description_set_timer_background" />
</PreferenceScreen>