<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="set_timer_switch"
        android:summary="@string/pref_description_set_timer_onoff"
        android:title="@string/pref_title_set_timer_onoff" />


    <com.adrianczuczka.songle.SetTimerPreference
        android:key="set_timer_amount"
        android:summary="@string/pref_description_set_timer_amount"
        android:title="@string/pref_title_set_timer_amount" />
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_map_types"
        android:entryValues="@array/pref_map_type_values"
        android:key="example_list"
        android:negativeButtonText="Ok"
        android:positiveButtonText="Cancel"
        android:title="@string/pref_title_choose_map_type" />

</PreferenceScreen>
