<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan"
    tools:context="com.adrianczuczka.songle.WelcomeScreen"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/welcome_screen_main_title"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="100dp"
        app:autoSizeTextType="uniform"
        android:clickable="false"
        android:fontFamily="@font/sniglet_extrabold"
        android:shadowColor="@color/artist"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="5.0"
        android:text="@string/welcome_title"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/welcome_screen_play_button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sniglet_extrabold"
        android:text="@string/welcome_play_button"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_screen_main_title" />

    <Button
        android:id="@+id/welcome_screen_resume_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sniglet_extrabold"
        android:text="@string/welcome_resume_button"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_screen_play_button"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/welcome_screen_settings_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="8dp"
        android:width="100dp"
        android:elevation="0dp"
        android:fontFamily="@font/sniglet_extrabold"
        android:maxLines="1"
        android:minWidth="100dp"
        android:text="@string/welcome_settings_button"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_screen_resume_button"
        tools:ignore="MissingPrefix" />

    <ImageView
        android:layout_width="161dp"
        android:layout_height="83dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:rotation="-30"
        app:layout_constraintEnd_toStartOf="@+id/welcome_screen_surprise_emoji"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/joy_emoji"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/welcome_screen_surprise_emoji"
        android:layout_width="69dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="48dp"
        android:rotation="30"
        app:layout_constraintBottom_toTopOf="@+id/welcome_screen_main_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/surprise_emoji"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/welcome_screen_thinking_emoji"
        android:layout_width="82dp"
        android:layout_height="76dp"
        android:layout_marginBottom="216dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_screen_play_button"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/thinking_emoji"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="76dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:rotation="-20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcome_screen_thinking_emoji"
        app:layout_constraintVertical_bias="0.105"
        app:srcCompat="@mipmap/music_emoji"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/welcome_screen_disk"
        android:layout_width="0dp"
        android:layout_height="177dp"
        android:src="@drawable/record_disk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="57dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:rotation="-60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcome_screen_disk"
        app:layout_constraintVertical_bias="0.917"
        app:srcCompat="@mipmap/orange_diamond"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:rotation="-20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838"
        app:srcCompat="@mipmap/yellow_blank"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:rotation="70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcome_screen_disk"
        app:layout_constraintVertical_bias="0.955"
        app:srcCompat="@mipmap/red_stars"
        tools:ignore="ContentDescription" />

</android.support.constraint.ConstraintLayout>
